--- a/app/components/ui/item.html
+++ b/app/components/ui/item.html
@@ -1,50 +1,40 @@
 <div class="animate-switch-container"  bindonce="item" bo-switch="item.type">
 	<div class="animate-switch" bo-switch-when="gene">
-	  <ul  class="list-unstyled">
-	    <li>
-	    	<span bo-text="item.class"></span>: <span bindonce bo-text="item.name"></span>
-	    </li>
-	  </ul>
-	  <div
-	  	panel
-	  	heading="more"
-	  	is-open="item.open"
-	  	label=""
-	  	title="Show more information">
-		  <ul class="list-unstyled">
-		  	<li ng-if="item.class == 'ligand'">
-		  		Paired receptors:
-		  		<span neighbors-list="graphData.outEdgesIndex[item.id]"
-		  			key="target"
-		  			array="graphData.nodesIndex"></span>
-		  	</li>
-		  	<li ng-if="item.class == 'receptor'">
-		  		Paired ligands:
-		  		<span neighbors-list="graphData.inEdgesIndex[item.id]"
-		  			key="source"
-		  			array="graphData.nodesIndex"></span>
-		  		</li>
-	      	<li>Age: <span bo-text="item['age']"></span></li>
-					<li>Taxon: <span bo-text="item['taxon']"></span></li>
-					<li>UniProtID: <span bo-text="item['uniprotid']"></span></li>
-	      </ul>
-	  </div>
+	  <h5><span bo-text="item.name"></span> <span bo-text="item.class"></span></h5>
+
+	  <ul class="list-unstyled">
+	  	<li ng-if="item.class == 'ligand'">
+	  		Paired receptors:
+	  		<span neighbors-list="graphData._outEdgesIndex[item.id]"
+	  			key="target"
+	  			array="graphData.nodesIndex"></span>
+	  	</li>
+	  	<li ng-if="item.class == 'receptor'">
+	  		Paired ligands:
+	  		<span neighbors-list="graphData._inEdgesIndex[item.id]"
+	  			key="source"
+	  			array="graphData.nodesIndex"></span>
+	  		</li>
+      <li>Age: <span bo-text="item['age']"></span></li>
+			<li>Taxon: <span bo-text="item['taxon']"></span></li>
+			<li>UniProtID: <span bo-text="item['uniprotid']"></span></li>
+    </ul>
 
 	</div>
 
 	<div class="animate-switch"
 		bo-switch-when="sample"
 		bindonce="item">
+	  <h5><span bo-text="item.name"></span></h5>
 	  <ul
 			class="list-unstyled"
 			ng-init="ligands = (graphData._outEdgesIndex[item.id] | filter : { type: 'expression' }); receptors = (graphData._inEdgesIndex[item.id] | filter : { type: 'expression' })">
-	    <li>Sample cell: <span bo-text="item.name"></span></li>
 	    <li>
 	    	<span bo-text="ligands > 0 ? 'Sum of ' : ''"></span>
 	    	Ligand expression:
 	    	<span ng-bind="item.values[0] | number:2"></span>
 	    </li>
-	    <li ng-if="ligands.length > 0">Ligands:
+	    <li>Ligands:
 	    	<span
 					neighbors-list="ligands"
 					key="target"
@@ -55,63 +45,33 @@
 	    	Receptor expression:
 	    	<span ng-bind="item.values[1] | number:2"></span>
 	    </li>
-	    <li ng-if="receptors.length > 0">
+	    <li>
 	    	Receptors:
 	    	<span neighbors-list="receptors"
 					key="source"
 					array="graphData.nodesIndex"></span>
 	    </li>
+	    <li bindonce ng-repeat="(k,v) in item.meta" bo-text="k + ': ' + v"></li>
 	  </ul>
-	  <div
-	  	panel
-	  	heading="more"
-	  	is-open="item.open"
-	  	label=""
-	  	title="Show more information">
-
-		  <ul class="list-unstyled"
-				ng-init="ligands = (graphData.outEdgesIndex[item.id] | filter : { type: 'expression' });
-				         receptors = (graphData.inEdgesIndex[item.id] | filter : { type: 'expression' })">
-		    <li bo-if="graphData.outEdgesIndex[item.id].length > 0">
-		    	Ligands:
-		    	<span
-						neighbors-list="ligands"
-						key="target"
-						array="graphData.nodesIndex"></span>
-		    </li>
-		    <li bo-if="receptors.length > 0">
-		    	Receptors:
-		    	<span
-						neighbors-list="receptors"
-						key="source"
-						array="graphData.nodesIndex"></span>
-		    </li>
-		    <li><ul class="list-unstyled">
-		      <li bindonce ng-repeat="(k,v) in item.meta" bo-text="k + ': ' + v"></li>
-		    </ul></li>
-		  </ul>
-	  </div>
 
 	</div>
 
 	<div class="animate-switch" bo-switch-when="sample-sample" bindonce="item">
+		<h5 bo-text="item.name"></h5>
 		<ul  class="list-unstyled">
-			<li>Expression: <span bo-text="item.name"></span></li>
 			<li>Expression product: <span ng-bind="item.value | number:2"></li>
 		</ul>
 	</div>
 
 	<div class="animate-switch" bo-switch-when="expression" bindonce="item">
+		<h5 bo-text="item.name"></h5>
 	  <ul  class="list-unstyled">
-	    <li>Expression: <span bo-text="item.name"></span></li>
 	    <li>Expression value: <span ng-bind="item.value | number:2"></li>
 	  </ul>
 	</div>
 
 	<div class="animate-switch" bo-switch-when="pair">
-	  <ul  class="list-unstyled">
-	    <li>L-R Pair: <span bindonce bo-text="item.name"></span></li>
-	  </ul>
+		<h5 bo-text="item.name"></h5>
 	</div>
 
 </div>
