--- a/app/components/ui/bottom-panel.html
+++ b/app/components/ui/bottom-panel.html
@@ -9,7 +9,7 @@
 <script type="text/ng-template" id="cellLigandTemplate">
   <div class="ngCellText">
     <input type="checkbox" class="glyphicon glyphicon-eye-close"
-      ng-model="map.genes[row.entity.ligandId].ticked"></input>
+      ng-model="row.entity.ligand.ticked"></input>
     {{row.getProperty(col.field)}}
   </div>
 </script>
@@ -17,10 +17,35 @@
 <script type="text/ng-template" id="cellReceptorTemplate">
   <div class="ngCellText">
     <input type="checkbox" class="glyphicon glyphicon-eye-close"
-      ng-model="map.genes[row.entity.receptorId].ticked"></input>
+      ng-model="row.entity.receptor.ticked"></input>
     {{row.getProperty(col.field)}}
   </div>
 </script>
+
+<script type="text/ng-template" id="visibleHeaderCellTemplate">
+  <div class="ngHeaderSortColumn {{col.headerClass}}"
+    ng-style="{'cursor': col.cursor}"
+    ng-class="{ 'ngSorted': !noSortVisible }">
+    <div ng-class="'colt' + col.index" class="ngHeaderText">
+      <!-- input
+        type="checkbox"
+        class="glyphicon glyphicon-eye-close"
+        ng-model="allSelected"
+        ng-change="toggleSelectAll(allSelected)"></input -->
+      <span ng-click="col.sort($event)">{{col.displayName}}</span>
+    </div>
+    <div class="ngSortButtonDown" ng-show="col.showSortButtonDown()"></div>
+    <div class="ngSortButtonUp" ng-show="col.showSortButtonUp()"></div>
+    <div class="ngSortPriority">{{col.sortPriority}}</div>
+  </div>
+  <div
+    ng-show="col.resizable"
+    class="ngHeaderGrip"
+    ng-click="col.gripClick($event)"
+    ng-mousedown="col.gripOnMouseDown($event)"></div>
+</script>
+
+
 
 <tabset>
   <tab active="active1">
